ヤマトの送り状印刷ができるようになった。ほかバグ修正

--- a/HighLandirect/Domains/Reports/ReportYamato.xaml
+++ b/HighLandirect/Domains/Reports/ReportYamato.xaml
@@ -12,6 +12,11 @@
     </UserControl.Background>
     -->
     <Grid>
+        <Grid.Resources>
+            <Style TargetType="Label">
+                <Setter Property="Foreground" Value="Black" />
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
