--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -56,12 +56,13 @@
         <f:YomiganaWPFTextBox x:Name="CustName" Text="{Binding Customer.CustName, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="30" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" 
-                              BindingControl="Furigana" MinWidth="100" FontSize="18" />
+                              BindingControl="Furigana" MinWidth="100" FontSize="18" InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
 
         <Label Content="ふりがな" Grid.Column="0" Grid.Row="2" />
         <TextBox Name="Furigana" Text="{Binding Customer.Furigana, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" FontSize="16"  />
+                 MaxLength="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" FontSize="16" 
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"/>
         <TextBox Text="{Binding Customer.Keisho, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="1" Grid.Column="2" Grid.Row="1" MinWidth="30" FontSize="16" Grid.ColumnSpan="1" Margin="2,0,0,0"  />
@@ -69,7 +70,8 @@
         <Label Content="郵便番号" Grid.Column="3" />
         <TextBox Name="PostalCD" Text="{Binding Customer.PostalCD, Converter={x:Static Converters:PostalCdConverter.Default}, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" >
+                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="Off" InputMethod.IsInputMethodEnabled="False">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="KeyUp">
                     <b:LivetCallMethodAction MethodTarget="{Binding}" MethodName="PostalCDTextBox_KeyUp" />
@@ -80,12 +82,14 @@
         <Label Content="市町村名" Grid.Column="3" Grid.Row="1" />
         <TextBox Text="{Binding Customer.CityName, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"/>
 
         <Label Content="住所１" Grid.Column="3" Grid.Row="2" />
         <TextBox Name="Address1" Text="{Binding Customer.Address1, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}">
+                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native">
             <i:Interaction.Triggers>
                 <l:InteractionMessageTrigger Messenger="{Binding Messenger}" MessageKey="SetFocus">
                     <b:SetFocusAction />
@@ -98,21 +102,24 @@
         <Label Content="住所２" Grid.Column="3" Grid.Row="3" />
         <TextBox Text="{Binding Customer.Address2, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="3" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="3" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
         <Label Content="住所３" Grid.Column="3" Grid.Row="4" />
         <TextBox Text="{Binding Customer.Address3, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
         <Label Content="住所４" Grid.Column="3" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Address4, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}" />
-
+                 MaxLength="200" Grid.Column="4" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
         
         <Label Content="電話番号" Grid.Row="4" />
         <TextBox Text="{Binding Customer.Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="13" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+                 MaxLength="13" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="Off" />
 
         <Label Content="FAX" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Fax, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
@@ -130,7 +137,8 @@
         <Label Content="メモ" Grid.Row="8" />
         <TextBox Text="{Binding Customer.Memo, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
         <Label Content="最終荷主日" Grid.Row="7" Grid.Column="0"/>
         <TextBox MaxLength="200" Text="{Binding Customer.LatestSend, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="1" Grid.Row="7" />
         <Label Content="最終宛先日" Grid.Row="7" Grid.Column="3"/>
