--- a/HighLandirect/Views/ShellWindow.xaml
+++ b/HighLandirect/Views/ShellWindow.xaml
@@ -18,8 +18,9 @@
         d:DataContext="{d:DesignInstance vm:ShellViewModel}"
         Title="{Binding Title}"
         Icon="{StaticResource BookLibraryImageSource}"
-        Height="800" Width="1500"
-        Background="#FF87B2F3" BorderBrush="#FF87B2F3">
+        Height="840" Width="1540"
+        Background="#FF87B2F3" BorderBrush="#FF87B2F3"
+        WindowStartupLocation="CenterScreen">
     
     <Window.InputBindings>
         <KeyBinding x:Name="saveKeyBinding" Key="S" Modifiers="Control"/>
