--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -84,7 +84,8 @@
         <TextBox Text="{Binding Customer.CityName, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="200" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"/>
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 IsReadOnly="True" Background="LightGray" />
 
         <Label Content="住所１" Grid.Column="3" Grid.Row="2" />
         <TextBox Name="Address1" Text="{Binding Customer.Address1, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
