fix two way binding in customer list label checkbox

--- a/HighLandirect/Views/CustomerListView.xaml
+++ b/HighLandirect/Views/CustomerListView.xaml
@@ -98,7 +98,7 @@
                     <DataGridTemplateColumn Header="ラベル" Width="30" SortMemberPath="Customer.Label" >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox IsChecked="{Binding Customer.Label}" />
+                                <CheckBox IsChecked="{Binding Path=Customer.Label, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
