--- a/HighLandirect/Domains/Reports/ReportYamato.xaml
+++ b/HighLandirect/Domains/Reports/ReportYamato.xaml
@@ -57,7 +57,8 @@
             <Label Content="{Binding Order.CustomerMasterReceive.PostalCD6, Converter={x:Static c:PostalCdConverter.Default}}" Grid.Column="1" Margin="190,0,34,0" Grid.Row="1" FontFamily="MS Gothic" FontSize="28" />
             <Label Content="{Binding Order.CustomerMasterReceive.PostalCD7, Converter={x:Static c:PostalCdConverter.Default}}" Grid.Column="1" Margin="218,0,6,0" Grid.Row="1" FontFamily="MS Gothic" FontSize="28" />
             <Label Content="{Binding Order.CustomerMasterReceive.Phone}" Grid.Column="1" Margin="40,6,0,0" Grid.Row="2" FontFamily="MS Gothic" FontSize="22" />
-            <Label Content="{Binding Order.CustomerMasterReceive.Address1}" Grid.Column="1" Margin="0" Padding="15, 5, 0, 0" Grid.Row="3" FontFamily="MS Gothic" FontSize="18" />
+            <Label Content="{Binding Order.CustomerMasterReceive.PrefectureName}" Grid.Column="1" Margin="0" Padding="15, 5, 0, 0" Grid.Row="3" FontFamily="MS Gothic" FontSize="18" />
+            <Label Content="{Binding Order.CustomerMasterReceive.Address1}" Grid.Column="1" Margin="75,0,0,0" Padding="15, 5, 0, 0" Grid.Row="3" FontFamily="MS Gothic" FontSize="18" />
             <Label Content="{Binding Order.CustomerMasterReceive.Address2}" Grid.Column="1" Margin="0" Padding="15, 5, 0, 0" Grid.Row="4" FontFamily="MS Gothic" FontSize="18" />
             <Label Content="{Binding Order.CustomerMasterReceive.Address3}" Grid.Column="1" Margin="0" Padding="15, 5, 0, 0" Grid.Row="5" FontFamily="MS Gothic" FontSize="18" />
             <Label Content="{Binding Order.CustomerMasterReceive.Address4}" Grid.Column="1" Margin="0" Padding="15, 5, 0, 0" Grid.Row="6" FontFamily="MS Gothic" FontSize="18" />
@@ -71,7 +72,8 @@
             <Label Content="{Binding Order.CustomerMasterSend.PostalCD6, Converter={x:Static c:PostalCdConverter.Default}}" Grid.Column="1" Margin="190,0,38,0" Grid.Row="8" FontFamily="MS Gothic" FontSize="24" />
             <Label Content="{Binding Order.CustomerMasterSend.PostalCD7, Converter={x:Static c:PostalCdConverter.Default}}" Grid.Column="1" Margin="218,0,10,0"  Grid.Row="8" FontFamily="MS Gothic" FontSize="24" />
             <Label Content="{Binding Order.CustomerMasterSend.Phone}" Grid.Column="1" Margin="40,0,0,0" Grid.Row="9" FontFamily="MS Gothic" FontSize="22" Height="30" VerticalAlignment="Top" />
-            <Label Content="{Binding Order.CustomerMasterSend.Address1}" Grid.Column="1" Margin="0" Padding="15, 3, 0, 0"  Grid.Row="10" FontFamily="MS Gothic" FontSize="15" />
+            <Label Content="{Binding Order.CustomerMasterSend.PrefectureName}" Grid.Column="1" Margin="0" Padding="15, 3, 0, 0"  Grid.Row="10" FontFamily="MS Gothic" FontSize="15" />
+            <Label Content="{Binding Order.CustomerMasterSend.Address1}" Grid.Column="1" Margin="65,0,0,0" Padding="15, 3, 0, 0"  Grid.Row="10" FontFamily="MS Gothic" FontSize="15" />
             <Label Content="{Binding Order.CustomerMasterSend.Address2}" Grid.Column="1" Margin="0" Padding="15, 3, 0, 0"  Grid.Row="11" FontFamily="MS Gothic" FontSize="15" />
             <Label Content="{Binding Order.CustomerMasterSend.Address3}" Grid.Column="1" Margin="0" Padding="15, 3, 0, 0"  Grid.Row="12" FontFamily="MS Gothic" FontSize="15" />
             <Label Content="{Binding Order.CustomerMasterSend.Address4}" Grid.Column="1" Margin="0" Padding="15, 3, 0, 0"  Grid.Row="13" FontFamily="MS Gothic" FontSize="15" />
