--- a/HighLandirect/Views/CustomerListView.xaml
+++ b/HighLandirect/Views/CustomerListView.xaml
@@ -97,7 +97,7 @@
                     </DataGridTemplateColumn>
                     <DataGridTextColumn Binding="{Binding Customer.CustName}" Header="顧客名" Width="100"/>
                     <DataGridTextColumn Binding="{Binding Customer.PostalCD}" Header="郵便番号" Width="70"/>
-                    <DataGridTextColumn Binding="{Binding Customer.CityName}" Header="市町村名" Width="70"/>
+                    <DataGridTextColumn Binding="{Binding Customer.PrefectureName}" Header="都道府県名" Width="70"/>
                     <DataGridTextColumn Binding="{Binding Customer.Address1}" Header="住所１" Width="150"/>
                     <DataGridTextColumn Binding="{Binding Customer.Address2}" Header="住所２" Width="150"/>
                     <DataGridTextColumn Binding="{Binding Customer.Phone}" Header="電話番号" Width="100"/>
